results/scraper/box64/400
Error during make -j4 
Hi,
During the make -j4 command I got this issue :
[  1%] Building C object CMakeFiles/dynarec_native.dir/src/dynarec/arm64/dynarec_arm64_functions.c.o
[  1%] Built target WRAPPERS
In file included from /home/math/box64/src/emu/x64emu_private.h:4,
                 from /home/math/box64/src/dynarec/dynablock.c:10:
/home/math/box64/src/include/regs.h:250:2: error: unknown type name ‘__uint128_t’
  250 |  __uint128_t u128;
      |  ^~~~~~~~~~~
In file included from /home/math/box64/src/dynarec/dynablock.c:16:
....
....
make[2]: *** [CMakeFiles/native_pass1.dir/build.make:95: CMakeFiles/native_pass1.dir/src/dynarec/arm64/dynarec_arm64_emit_tests.c.o] Error 1
make[2]: *** [CMakeFiles/native_pass1.dir/build.make:108: CMakeFiles/native_pass1.dir/src/dynarec/arm64/dynarec_arm64_emit_math.c.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:163: CMakeFiles/native_pass1.dir/all] Error 2
make: *** [Makefile:182: all] Error 2

I ran the command on a raspberry pi4 with Raspbian GNU/Linux 11 (bullseye)
Do you know where that come from ?